...
                child: Column(
                  children: [
                    Padding(
                      padding: const EdgeInsets.fromLTRB(8.0,14.0,8.0,8),
                      child: Text(
                        "Recommended",
                        key: Key("recommended-text"),
                        style: TextStyle(fontSize: 20, letterSpacing: 2),
                      ),
                    ),
                    Padding(
                      padding: const EdgeInsets.fromLTRB(8,0,8,30),
                      child: Divider(
...
                    ),
                  ],
                ),
              ),
            ),
            RaisedButton(
              key: Key("done-button"),
               shape: new RoundedRectangleBorder(borderRadius: new BorderRadius.circular(30.0)),
            color: Color.fromRGBO(76, 116, 139, 1),
            child: Padding(
              padding: const EdgeInsets.fromLTRB(50, 20, 50, 20),
              child: Text("Done", style: TextStyle(color: Colors.white, fontSize: 14),),
            ),
...
